--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# 忽略Windows系统冗余文件
+nul
+*.tmp
+*.bak
+Thumbs.db
+Desktop.ini
+
+# 忽略IDE配置文件（如.idea，无需上传）
+.idea/
+*.iml
+
+# 忽略项目构建产物和依赖（按需添加）
+target/
+node_modules/
+dist/
 # Logs
 logs
 *.log
